--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
             padding: 5px;
         }
         p{
-            color: burlywood;
+            color: beige;
         }
     </style>
 </head>
 <body>
-    <div>h2>My Sadness</h2>
+    <div>
+        <h2>My Sadness</h2>
         <p>Ajk amr mon vlo nai. Ajk ami <span>Sokaleh</span> gum tekeh deri koreh uteci tai</p>
     </div>
 </body>
