--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: black;
         }
         div{
-            background-color: aliceblue;
+            background-color: rgb(4, 42, 75);
             border: 5px solid red;
             border-radius: 10px;
             margin: 5px;
